manifests/ingress/clickhouse.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clickhouse
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: ##CLICKHOUSE_HOST##
    http:
      paths:
      - path: /
        backend:
          serviceName: clickhouse
          servicePort: http
  tls:
  - hosts:
    - ##CLICKHOUSE_HOST##
    secretName: clickhouse
