manifests/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clickhouse-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authrentication Required"
spec:
  rules:
  - host: ##CLICKHOUSE_HOST##
    http:
      paths:
      - path: /
        backend:
          serviceName: clickhouse
          servicePort: http
