manifests/ingress/loghouse.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loghouse
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authrentication Required"
spec:
  rules:
  - host: ##LOGHOUSE_HOST##
    http:
      paths:
      - path: /
        backend:
          serviceName: loghouse
          servicePort: 9292
