manifests/ingress/tabix.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tabix
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authrentication Required"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: ##TABIX_HOST##
    http:
      paths:
      - path: /
        backend:
          serviceName: tabix
          servicePort: http
  tls:
  - hosts:
    - ##TABIX_HOST##
    secretName: tabix
